2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/makebin/makebin.c:
	  Fix buffer overflow, patch #400 by bbbbbr.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Support tstw.
	* support/regression/ports/f8,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/Makefile.in:
	  f8 regression test infrastructure.

2021-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/makebin/makebin.c:
	  Option for logo omission, patch #395 by bbbbbr.

2021-10-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issues in cost handling for large functions.

2021-10-20 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-10-19 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCClrange.c,
	  src/SDCCopt.c,
	  src/f8/gen.c,
	  src/f8/main.c,
	  src/f8/ralloc2.cc:
	  Improve codegen for experimental f8 port.

2021-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Peephole rule refactoring inspired by fix to a bug found by roybaer.

2021-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/_divulong.s,
	  device/lib/stm8/_modulong.s,
	  device/lib/stm8/Makefile.in,
	  src/stm8/peeph.def:
	  Revert some hand-written asm back to generic C, since SDCC now generates better code.

2021-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/f8/gen.c,
	  device/include/math.h,
	  device/lib/f8/Makefile.in,
	  src/f8/gen.h,
	  src/f8/main.c:
	  Improve codegen for experimental f8 port.

2021-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/btowc.c:
	  Fix btowc handling of int values that are valid characters when cast to unsigned char.

2021-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve wide left shift by literal.
	  
2021-10-12 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c,