@@ -1,5 +1,12 @@
 2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
+	* src/SDCCsymt.c,
+	  src/f8/gen.c,
+	  src/f8/main.c:
+	  f8 fixes.
+
+2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
+
 	* support/makebin/makebin.c:
 	  Fix buffer overflow, patch #400 by bbbbbr.
 
